--- a/.forestry/front_matter/templates/general.yml
+++ b/.forestry/front_matter/templates/general.yml
@@ -13,3 +13,7 @@ fields:
 - type: file
   name: background
   label: Cover Picture
+pages:
+- _notes/coca-cola.md
+- _notes/no-picture.md
+- _notes/poka-jhola.md
