--- a/_data/frontpage.yml
+++ b/_data/frontpage.yml
@@ -1,22 +1,24 @@
 ---
 recent_publications:
-- 'Rowe CA, Lichvar RW and Wolf PG (2020) How Many Tree Species of Birch Are in Alaska?
-  Implications for Wetland Designations. Front. Plant Sci. 11:750. doi: 10.3389/fpls.2020.00750'
-- 'Wolf PG, Rowe CA, Kinosian SP, Der JP, Lockhart PJ, Shepherd LD, McLenachan PA,
-  Thomson JA. 2019. Worldwide relationships in the fern genus Pteridium (bracken)
-  based on nuclear genome markers. American Journal of Botany 106(10): 1365–1376'
-- 'Rowe CA, PG Wolf, RW Lichvar. 2019. Do genetic differences explain the ability
-  of an alkaline shrub to grow in both uplands and wetlands? Western North American
-  Naturalist: 79: 260–269'
-- Kinosian SP and JS Suissa. 2020. Mothers of Pteridology. American Fern Journal 110(1),
-  3-19, (5 February 2020). https://doi.org/10.1640/0002-8444-110.1.3
+  - "Rowe CA, Lichvar RW and Wolf PG (2020) How Many Tree Species of Birch Are in Alaska?
+    Implications for Wetland Designations. Front. Plant Sci. 11:750. doi: 10.3389/fpls.2020.00750"
+  - "Wolf PG, Rowe CA, Kinosian SP, Der JP, Lockhart PJ, Shepherd LD, McLenachan PA,
+    Thomson JA. 2019. Worldwide relationships in the fern genus Pteridium (bracken)
+    based on nuclear genome markers. American Journal of Botany 106(10): 1365–1376"
+  - "Rowe CA, PG Wolf, RW Lichvar. 2019. Do genetic differences explain the ability
+    of an alkaline shrub to grow in both uplands and wetlands? Western North American
+    Naturalist: 79: 260–269"
+  - Kinosian SP and JS Suissa. 2020. Mothers of Pteridology. American Fern Journal 110(1),
+    3-19, (5 February 2020). https://doi.org/10.1640/0002-8444-110.1.3
 latest_news:
-- name: "2022"
-  news:
-  - 'March: New website launched'
-- name: "2020"
-  news:
-  - 'February 2020: Sylvia’s paper “Mothers of Pteridology” published in the American
-    Fern Journal:'
-  - 'June 2020: Alaskan Betula paper published'
-  - March 20202 hehe
+  - name: "2022"
+    news:
+      - "March: New website launched"
+  - name: "2020"
+    news:
+      - "February 2020: Sylvia’s paper “Mothers of Pteridology” published in the American
+        Fern Journal:"
+      - "June 2020: Alaskan Betula paper published"
+
+title: Welcome to the Lab!
+description: Research in my lab focuses on plant evolutionary biology, spanning population genetics to deep phylogeny. My main interest is in ferns (including Pteridium and Ceratopteris), but students in the lab are also working on flowering plants, including Eriogonum, Populus, Allenrolfea, Betula, and Boechera. The lab uses a wide array of tools, including next-generation genomic sequencing, RNA-seq, Rad-seq (GBS), single-gene Sanger sequencing, microsatellites, and AFLPs.
